--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 <body>
   <div id="timer"> </div>
+  <div id="highscore"> </div>
   <div class="pageOne">
     <h1>Coding Quiz Challenge</h1>
-    <p>Try to answer the following code</p>
-    <p>Timer</p>
-    <p>View High Scores</p>
+    <p>Try to answer the following code hhhhhhhhhh</p>
     <button id="startQuiz" type="button" class="btn btn-primary">Start Quiz</button>
-  </div>
+    </div>
   <script src="./questions.js"></script>
   
 </body>
