--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <div id="highscore"> </div>
   <div class="pageOne">
     <h1>Coding Quiz Challenge</h1>
-    <p>Try to answer the following code hhhhhhhhhh</p>
+    <p>Try to answer the following code. Your time is 75 seconds. Wrong answer drops 15 seconds of your time.
+      Test will be submitted after time is Expired.
+      Do not refresh the Page. Click the 'Start' button: </p>
     <button id="startQuiz" type="button" class="btn btn-primary">Start Quiz</button>
     </div>
   <script src="./questions.js"></script>
